Testing with ScalaTest.

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@ under the License.
             <artifactId>linearroad-datasource</artifactId>
             <version>3.0.10</version>
         </dependency>
+		<dependency>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_2.10</artifactId>
+			<version>3.0.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<profiles>
